[package]
name = "dioxus_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", version = "*" }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus", version = "*" }
serde = { version = "1.0.162", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.84"
